--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,10 +31,10 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  flutter_native_splash: ^2.4.1
 
 dev_dependencies:
   flutter_test:
@@ -58,7 +58,7 @@ flutter:
   # the material Icons class.
   assets: 
     - assets/login_image.png
-    - assets/2.jpg
+    - assets/logo_splash.png
     - assets/logo.png
 
   uses-material-design: true
@@ -92,3 +92,13 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+# flutter_native_splash-development.yaml
+flutter_native_splash:
+  color: "#ffffff"
+  image: assets/logo_splash.png
+
+  android_12:
+    image: assets/logo_splash.png
+    icon_background_color: "#ffffff"
+
+  web: false
