--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,10 +35,12 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
   flutter_native_splash: ^2.4.1
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+  
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
@@ -52,14 +54,27 @@ dev_dependencies:
 
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   assets: 
-    - assets/login_image.png
+    - assets/login_image.jpg
     - assets/logo_splash.png
     - assets/logo.png
+    - assets/login.png
+  
+  fonts:
+  - family: SF
+    fonts:
+      - asset: assets/fonts/SF-Pro-Display-Regular.otf
+        weight: 500
+      
+      - asset: assets/fonts/SF-Pro-Display-Medium.otf
+        weight: 600
+
+      - asset: assets/fonts/SF-Pro-Display-Bold.otf
+        weight: 700
+
 
   uses-material-design: true
   # To add assets to your application, add an assets section, like this:
@@ -102,3 +117,4 @@ flutter_native_splash:
     icon_background_color: "#ffffff"
 
   web: false
+
