--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_card_swiper: ^7.0.1
   palette_generator: ^0.3.3+4
   fluttertoast: ^8.2.6
+  confetti: ^0.7.0
 
 dev_dependencies:
   flutter_test:
