--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -74,6 +74,9 @@ flutter:
     - assets/en_route/6.png
     - assets/en_route/7.png
     - assets/record_background.jpg
+    - assets/profile_picture.png
+    - assets/graph_image.png
+    - assets/photo_post.png
 
   fonts:
     - family: SF
