--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,7 @@ dependencies:
   palette_generator: ^0.3.3+4
   fluttertoast: ^8.2.6
   confetti: ^0.7.0
+  rename_app: ^1.6.1
 
 dev_dependencies:
   flutter_test:
